--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,124 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:after,
+blockquote:before,
+q:after,
+q:before {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 /*end reset*/
 
 strong {
@@ -11,33 +128,28 @@ strong {
 
 div {
   box-sizing: border-box;
-
 }
-body{
-  font-family: 'Roboto', sans-serif;
-  color: #063A42;
+body {
+  font-family: "Roboto", sans-serif;
+  color: #063a42;
   background: #e7f2f4;
-
 }
 
 /*move*/
-body{
+body {
   background: white;
 }
 
-h1, h2{
+h1,
+h2 {
   font-style: bold;
-  text-transform: uppercase;
 }
 
-h2{
+h2 {
   font-weight: 300;
   font-size: 40px;
   margin-bottom: 30px;
 }
-
-
-
 
 h3 {
   font-size: 25px;
@@ -48,12 +160,9 @@ section {
   padding: 40px 0;
 }
 
-
-
-ul{
+ul {
   margin-left: 30px;
   margin-bottom: 20px;
-
 }
 
 li {
@@ -65,194 +174,231 @@ p {
   line-height: 1.4em;
 }
 
-.container{
+.container {
   width: 900px;
   margin: auto;
   padding: 15px;
 }
 
-
-
-header{
+header {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#032126+0,063a42+100 */
-  background: rgb(3,33,38); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(3,33,38,1) 0%, rgba(6,58,66,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  rgba(3,33,38,1) 0%,rgba(6,58,66,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  rgba(3,33,38,1) 0%,rgba(6,58,66,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: rgb(3, 33, 38); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(3, 33, 38, 1) 0%,
+    rgba(6, 58, 66, 1) 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(3, 33, 38, 1) 0%,
+    rgba(6, 58, 66, 1) 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(3, 33, 38, 1) 0%,
+    rgba(6, 58, 66, 1) 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#032126', endColorstr='#063a42',GradientType=0 ); /* IE6-9 */
 
   color: white;
   padding-top: 40px;
   padding-bottom: 40px;
-
 }
-
-
 
 .hdr__container {
   display: flex;
 }
 
-.hdr__profile_img{
-  background: url('/profile.jpg');
+.hdr__profile_img {
+  background: url("/profile.jpg");
   background-size: cover;
   height: 200px;
   width: 200px;
   border-radius: 100px;
   flex-shrink: 0;
-
-
 }
 
-
-.hdr__role{
+.hdr__role {
   font-style: italic;
-  margin-bottom: 4px;
+  margin-bottom: 14px;
+  color: rgb(108 238 227);
 }
 
-.hdr__copy{
+.hdr__copy {
   margin-left: 40px;
   margin-right: 80px;
 }
 
+.header_link {
+  color: lighten(var(--lightText1), 10);
+  text-shadow: 0px 1px 0px black;
+  font-size: 14px;
+  margin-top: 14px;
+  transition: all 0.2s;
+  display: block;
+}
 
+.header_link:hover {
+  opacity: 80%;
+}
 
 h1 {
   font-size: 45px;
   margin-bottom: 10px;
 }
 
-.hdr__tag{
+.hdr__tag {
   font-size: 30px;
   margin-bottom: 15px;
 }
 
-
-
 .objective {
   line-height: 1.4em;
-
 }
-
-
-
-
 
 /***************************/
-.experience{
+.experience {
   /*background: pink;*/
 }
-.experience section{
+.experience section {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-
-
-
-
-
-
-.exp__title{
+.exp__title {
   font-style: italic;
   /*font-size: 18px;*/
 }
 
-.exp__date{
+.exp__date {
   margin-bottom: 20px;
 }
 
-
 /***************************/
-.education{
+.education {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0d676b+0,0d7a6b+100 */
-  background: rgb(13,103,107); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(13,103,107,1) 0%, rgba(13,122,107,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  rgba(13,103,107,1) 0%,rgba(13,122,107,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  rgba(13,103,107,1) 0%,rgba(13,122,107,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: rgb(13, 103, 107); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(13, 103, 107, 1) 0%,
+    rgba(13, 122, 107, 1) 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(13, 103, 107, 1) 0%,
+    rgba(13, 122, 107, 1) 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(13, 103, 107, 1) 0%,
+    rgba(13, 122, 107, 1) 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0d676b', endColorstr='#0d7a6b',GradientType=0 ); /* IE6-9 */
 
   color: white;
 }
 
-.edu__block_wrap{
+.edu__block_wrap {
   padding: 60px 0;
   display: flex;
   justify-content: space-evenly;
 }
 
-.edu__block{
+.edu__block {
   margin-bottom: 20px;
 }
-.edu__school{
+.edu__school {
   font-weight: bold;
   margin-bottom: 5px;
   font-size: 18px;
 }
-.edu__degree{
+.edu__degree {
   /*font-style: italic;*/
 }
-.edu__status{
+.edu__status {
   /*margin-top: 5px;*/
 }
 
-.skills{
- /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0f917d+0,20ada1+100 */
-background: rgb(15,145,125); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(15,145,125,1) 0%, rgba(32,173,161,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(15,145,125,1) 0%,rgba(32,173,161,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(15,145,125,1) 0%,rgba(32,173,161,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f917d', endColorstr='#20ada1',GradientType=0 ); /* IE6-9 */
+.skills {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0f917d+0,20ada1+100 */
+  background: rgb(15, 145, 125); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(15, 145, 125, 1) 0%,
+    rgba(32, 173, 161, 1) 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(15, 145, 125, 1) 0%,
+    rgba(32, 173, 161, 1) 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(15, 145, 125, 1) 0%,
+    rgba(32, 173, 161, 1) 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f917d', endColorstr='#20ada1',GradientType=0 ); /* IE6-9 */
 
   color: white;
 }
 
-.skills h3{
+.skills h3 {
   height: 60px;
 }
 
-.sk__sets{
+.sk__sets {
   display: flex;
 }
 
-.sk__sets ul{
+.sk__sets ul {
   margin-left: 0;
 }
 
-.sk__set{
+.sk__set {
   width: 33.3%;
   padding: 20px;
 }
 
-.skills ul{
+.skills ul {
   list-style: none;
 }
 
-.bar_outer{
+.bar_outer {
   width: 100%;
   border: 1px solid white;
 }
 
-.bar_inner{
+.bar_inner {
   height: 10px;
   background: white;
 }
 
-.about{
-/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0d676b+0,0e6c70+100 */
-background: rgb(13,103,107); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(13,103,107,1) 0%, rgba(14,108,112,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(13,103,107,1) 0%,rgba(14,108,112,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(13,103,107,1) 0%,rgba(14,108,112,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0d676b', endColorstr='#0e6c70',GradientType=0 ); /* IE6-9 */
+.about {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0d676b+0,0e6c70+100 */
+  background: rgb(13, 103, 107); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(13, 103, 107, 1) 0%,
+    rgba(14, 108, 112, 1) 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(13, 103, 107, 1) 0%,
+    rgba(14, 108, 112, 1) 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(13, 103, 107, 1) 0%,
+    rgba(14, 108, 112, 1) 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0d676b', endColorstr='#0e6c70',GradientType=0 ); /* IE6-9 */
 
   color: white;
   line-height: 1.4em;
 }
 
-
-footer{
-  background: #063A42;
+footer {
+  background: #063a42;
   color: white;
   font-size: 12px;
   line-height: 1.4em;
@@ -260,19 +406,30 @@ footer{
   padding-bottom: 50px;
 }
 
-@media (max-width: 1000px){
-  .container{
+@media (max-width: 1000px) {
+  .container {
     width: 600px;
   }
 }
 
-@media (max-width: 700px){
-  .container{
+@media (max-width: 700px) {
+  .container {
     width: 100%;
   }
 
-  ul{
-    margin-left: 0px;
+  .hdr__container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h1 {
+    margin-top: 40px;
+  }
+
+  .hdr__copy {
+    /* width: 100%; */
+    margin: 0;
+    text-align: center;
+    padding: 40px;
   }
 }
-
